Fixed breadcrumb not wrapping for larger content.

--- a/docroot/themes/custom/civic/civic-library/components/03-organisms/breadcrumb/breadcrumb.scss
+++ b/docroot/themes/custom/civic/civic-library/components/03-organisms/breadcrumb/breadcrumb.scss
@@ -12,6 +12,7 @@
     margin: 0;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     width: 100%;
     padding: 0;
 
